@@ -670,17 +670,35 @@ index|[
 name|valLength
 index|]
 decl_stmt|;
+name|int
+name|taskId
+init|=
+name|context
+operator|.
+name|getTaskAttemptID
+argument_list|()
+operator|.
+name|getTaskID
+argument_list|()
+operator|.
+name|getId
+argument_list|()
+decl_stmt|;
+assert|assert
+name|taskId
+operator|<
+name|Byte
+operator|.
+name|MAX_VALUE
+operator|:
+literal|"Unit tests dont support> 127 tasks!"
+assert|;
 name|Random
 name|random
 init|=
 operator|new
 name|Random
-argument_list|(
-name|System
-operator|.
-name|currentTimeMillis
 argument_list|()
-argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -702,6 +720,23 @@ operator|.
 name|nextBytes
 argument_list|(
 name|keyBytes
+argument_list|)
+expr_stmt|;
+comment|// Ensure that unique tasks generate unique keys
+name|keyBytes
+index|[
+name|keyLength
+operator|-
+literal|1
+index|]
+operator|=
+call|(
+name|byte
+call|)
+argument_list|(
+name|taskId
+operator|&
+literal|0xFF
 argument_list|)
 expr_stmt|;
 name|random
