@@ -458,6 +458,8 @@ Release 0.21.0 - Unreleased
                gets suspended on tty output (Alexey Kovyrin via Stack)
    HBASE-2852  Bloom filter NPE (pranav via jgray)
    HBASE-2820  hbck throws an error if HBase root dir isn't on the default FS
+   HBASE-2884  TestHFileOutputFormat flaky when map tasks generate identical
+               data
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
